improved modal styles - got rid of the word 'points' beside the score - improved modal styles (got got rid of white borders) - made OP stand out from other comments - swapped out system scrollbars for more integrated ones to look better and solve rounding issue on bottom right corner - gradual coloring for score on comments and posts (richer orange the higher the score, richer blue for lower cores, when below 1) - day theme, added moon at top right of page to toggle theme from night to day

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@
   text-align: left;
   color: black;
   background-color: white;
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.75);
   word-wrap: break-word;
   margin: auto;
@@ -167,7 +167,6 @@
   max-width: 1200px;
   max-height: 90vh;
   background: #333;
-  border: 1px solid #999;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -176,8 +175,8 @@
 .modal-header {
   display: flex;
   flex-direction: row;
-  border-bottom: 1px solid #999;
   padding: 10px 10px 5px 10px;
+  box-shadow: 0 3px 7px -5px rgba(0,0,0,0.9);
 }
 
 .modal-body {
@@ -208,6 +207,19 @@
   border-left: 1px solid #555;
 }
 
+.post-comment-op {
+  color: #afafff;
+}
+
+.post-comment-op:after {
+  content: '[OP]';
+  font-family: monospace;
+  position: relative;
+  top: -1px;
+  margin-left: 3px;
+  color: #DDD;
+}
+
 /* don't add bottom padding on last child since parent already has it */
 .post-comment:not(:last-child) {
   margin-bottom: 20px;
@@ -236,6 +248,7 @@
   font-family: monospace;
   cursor: pointer;
   color: white;
+  user-select: none;
 }
 
 .btn-load-more-comments {
@@ -255,4 +268,55 @@
 
 .score-hidden {
   color: #DDD;
+}
+
+/* scrollbar styles */
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+  background: #444;
+  border-bottom-right-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+}
+
+/* Post Comment Goodness Indicators  */
+
+.kinda-good {
+  color: #ffce0a;
+}
+
+.real-good {
+  color: orange;
+}
+
+.super-good {
+  color: #ff7a00;
+}
+
+.bad {
+  color: rgb(0, 181, 247);
+}
+
+.real-bad {
+  color: rgb(62, 127, 255);
+}
+
+.super-bad {
+  color:  rgb(98, 103, 241);
+}
+
+/*  theme changer */
+.theme-changer {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+  user-select: none;
 }
